<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="load_button">LOAD</string>
    <string name="crop_button">CROP</string>
    <string name="crop_butto">CROP</string>
    <string name="light_button">LIGHT</string>
    <string name="color_button">COLOR</string>
    <string name="filters_button">FIlTERS</string>
    <string name="title_activity_feature">FeatureActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment_label">Main</string>
    <string name="feature_fragment_label">Feature</string>
    <string name="rotate_button">ROTATE</string>
    <string name="button_save">SAVE</string>
    <string name="brightnessText">Brightness: 0</string>
    <string name="saturation">Saturation: 0</string>
    <string name="contrast">Contrast: 0</string>
    <string name="constrast_100">Constrast: 100</string>
    <string name="contrast_100">Contrast : 100</string>
    <string name="save">SAVE</string>
    <string name="bw">BW</string>
    <string name="autumn">AUT</string>
    <string name="inverted">OPO</string>
    <string name="sepia">SEPIA</string>
</resources>